--- a/myPortfolio.html
+++ b/myPortfolio.html
@@ -30,6 +30,9 @@
               <a class="nav-link" href="myPortfolio.html">MyPortfolio</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="myResume.html">MyResume</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
             </li> 
           </ul>
@@ -58,7 +61,7 @@
         </div>
         <div class="column">
           <div class="content">
-          <img src="/w3images/nature.jpg" alt="Project3" style="width:100%">
+          <img src="" alt="Project3" style="width:100%">
             <h3>Project 3 here</h3>
             <p class="links">
                 <a href="https://yaya2020130.github.io/language-translator/">Click This Link</a>
