--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,9 @@
               <a class="nav-link" href="myPortfolio.html">MyPortfolio</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="myResume.html">MyResume</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
             </li> 
           </ul>
