--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
                   <a href="https://www.linkedin.com/in/abdulkadir-aba-25184419b/"><i class="fa fa-linkedin"></i></a>  
                   <a href="https://github.com/abdulkadiraba"><i class="fa fa-github"></i></a> 
                 </div>
-                <p><button href="contact.html">Contact</button></p>
+                <p>
+                    <a href='contact.html'><button>Contact</button></a>
+                </p>
               </div> 
             <div class="col-md-8 col-xs-12">
               <p id="p1">
